<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_sheet_rounded"
    android:orientation="vertical"
    android:padding="24dp">

    <TextView
        android:id="@+id/tv_amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:fontFamily="@font/outfit_bold"
        android:gravity="center"
        android:text="@string/zero_vnd"
        android:textColor="@color/brand_primary"
        android:textSize="28sp" />

    <androidx.gridlayout.widget.GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:columnCount="3"
        app:rowCount="4">

        <TextView
            android:id="@+id/btn_num_1"
            android:text="@string/one"
            style="@style/numpad_key"
             />
        <TextView
            android:id="@+id/btn_num_2"
            android:text="@string/two"
            style="@style/numpad_key"
            />
        <TextView
            android:id="@+id/btn_num_3"
            android:text="@string/three"
            style="@style/numpad_key"
            />

        <TextView
            android:id="@+id/btn_num_4"
            android:text="@string/four"
            style="@style/numpad_key"
            />
        <TextView
            android:id="@+id/btn_num_5"
            android:text="@string/five"
            style="@style/numpad_key"
            />
        <TextView
            android:id="@+id/btn_num_6"
            android:text="@string/six"
            style="@style/numpad_key"
            />

        <TextView
            android:id="@+id/btn_num_7"
            android:text="@string/seven"
            style="@style/numpad_key"
            />
        <TextView
            android:id="@+id/btn_num_8"
            android:text="@string/eight"
            style="@style/numpad_key"
            />
        <TextView
            android:id="@+id/btn_num_9"
            android:text="@string/nine"
            style="@style/numpad_key"
            />

        <TextView
            android:id="@+id/btn_num_dot"
            android:text=""
            android:background="@android:color/transparent"
            style="@style/numpad_key"
            />
        <TextView
            android:id="@+id/btn_num_0"
            android:text="@string/zero"
            style="@style/numpad_key"
            />

        <ImageView
            android:id="@+id/btn_backspace"
            android:padding="19dp"
            android:src="@drawable/ic_delete"
            app:tint="@color/status_red"
            style="@style/numpad_key"
            android:contentDescription="@string/action_delete"/>

    </androidx.gridlayout.widget.GridLayout>

    <Button
        android:id="@+id/btn_continue"
        android:text="@string/action_next"
        style="@style/btn_bottom" />

</LinearLayout>