<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_nav_home_selector"
        android:title="@string/nav_home" />

    <item
        android:id="@+id/nav_transaction"
        android:icon="@drawable/ic_nav_history_selector"
        android:title="@string/nav_transaction_history" />

    <item
        android:id="@+id/nav_center_cta_space"
        android:enabled="false"
        android:icon="@drawable/ic_nav_center_space"
        android:title="" />

    <item
        android:id="@+id/nav_budget"
        android:icon="@drawable/ic_nav_budget_selector"
        android:title="@string/nav_budget" />

    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/ic_nav_settings_selector"
        android:title="@string/nav_settings" />
</menu>
