<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_main"
    android:fillViewport="true"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:id="@+id/settings_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingTop="20dp"
        android:paddingRight="20dp"
        android:paddingBottom="110dp">

        <!-- Header -->
        <TextView
            android:id="@+id/tvSettings"
            style="@style/screen_title"
            android:text="@string/workspace_settings" />

        <TextView
            android:id="@+id/tv_Settings_SubTitle"
            style="@style/screen_subtitle"
            android:text="@string/setting_subtitle" />

        <!-- Section PREFERENCES (Categories & Members) -->
        <TextView
            style="@style/section_header"
            android:layout_marginTop="16dp"
            android:text="@string/section_header" />

        <androidx.cardview.widget.CardView style="@style/cardview_buttons">

            <LinearLayout style="@style/buttons_layout">

                <!-- Nút Members -->
                <LinearLayout
                    android:id="@+id/btn_manage_members"
                    style="@style/btn_component_layout">

                    <com.google.android.material.imageview.ShapeableImageView
                        style="@style/btn_main_icon"
                        android:background="@color/icon_setting_background"
                        app:srcCompat="@drawable/ic_group_regular"
                        app:tint="@color/brand_primary" />

                    <LinearLayout style="@style/btn_text_layout">

                        <TextView
                            style="@style/btn_item_title"
                            android:text="@string/members" />

                        <TextView
                            style="@style/btn_item_description"
                            android:text="@string/member_description" />
                    </LinearLayout>

                    <ImageView style="@style/btn_next_icon" />
                </LinearLayout>

                <View style="@style/buttons_divider" />

                <!-- Nút Categories (Phân quyền ở đây) -->
                <LinearLayout
                    android:id="@+id/btn_manage_categories"
                    style="@style/btn_component_layout">

                    <com.google.android.material.imageview.ShapeableImageView
                        style="@style/btn_main_icon"
                        android:background="@color/icon_setting_background"
                        app:srcCompat="@drawable/ic_category_regular"
                        app:tint="@color/brand_primary" />

                    <LinearLayout style="@style/btn_text_layout">

                        <TextView
                            style="@style/btn_item_title"
                            android:text="@string/categories" />

                        <TextView
                            style="@style/btn_item_description"
                            android:text="@string/add_or_edit_fund_categories" />
                    </LinearLayout>

                    <ImageView style="@style/btn_next_icon" />
                </LinearLayout>

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <!-- Section DANGER ZONE -->
        <TextView
            style="@style/section_header"
            android:layout_marginTop="24dp"
            android:text="@string/danger_zone"
            android:textColor="@color/status_red" />

        <androidx.cardview.widget.CardView style="@style/cardview_buttons">

            <LinearLayout style="@style/buttons_layout">

                <!-- Nút Leave/Delete Workspace (Tùy role) -->
                <LinearLayout
                    android:id="@+id/btn_leave_workspace"
                    style="@style/btn_component_layout">

                    <com.google.android.material.imageview.ShapeableImageView
                        style="@style/btn_main_icon"
                        android:background="@color/status_background_red"
                        app:srcCompat="@drawable/ic_logout_regular"
                        app:tint="@color/status_red" />

                    <LinearLayout style="@style/btn_text_layout">

                        <TextView
                            android:id="@+id/tv_leave_delete_title"
                            style="@style/btn_item_title"
                            android:text="@string/leave_workspace"
                            android:textColor="@color/status_red" />

                        <TextView
                            android:id="@+id/tv_leave_delete_desc"
                            style="@style/btn_item_description"
                            android:text="@string/remove_yourself_from_this_fund" />
                    </LinearLayout>

                    <ImageView style="@style/btn_next_icon" />
                </LinearLayout>

            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>